<resources>
    <string name="app_name">MyMoocProject</string>
    <string name="bluer">管家助手</string>
    <string name="girls">美女社区</string>
    <string name="wechat">微信精选</string>
    <string name="user">用户信息</string>
    <string name="remeberPass">记住密码</string>
    <string name="loginUser">用户名</string>
    <string name="loginPassWd">密码</string>
    <string name="LoginRegisterBtn">注册</string>
    <string name="LoginLoginBtn">登录</string>
    <string name="emailSure">邮箱需要验证，如果不验证将无法登录</string>
    <string name="forgetPasswd">忘记密码或修改密码?</string>
    <string name="findPasswd">找回密码</string>
    <string name="userName_info">用户名：</string>
    <string name="surechangeuserinfo">确认修改</string>
    <string name="exitlogin">退出登录</string>
    <string name="fromcamera">从相机选择</string>
    <string name="from_album">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="text_welfare">福利</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>

</resources>
