<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/chooseFromCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="14dp"
        android:text="@string/fromcamera"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/chooseFromAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="14dp"
        android:text="@string/from_album"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/cancelChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="14dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />


</LinearLayout>